// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityStartDiscussionComponent should show community start discussion 1`] = `
<pf-community-start-discussion
  postType="0"
  route="undefined"
  showPostJobButton={[Function Boolean]}
  store={[Function Store]}
  submittingCommunityJobSuccess$={[Function Store]}
  submittingCommunityPost$={[Function Store]}
>
  <div
    class="row mb-3"
  >
    <div
      class="col-4"
    >
      <div
        class="list-group"
      >
        <pf-community-tab />
        <pf-community-tab />
        <pf-community-tab />
      </div>
    </div>
    <div
      class="col-8 start-discussion-body pt-2 pb-2 pr-5"
    >
      <div
        class="w-100 pl-3"
      >
        
        
        
        
      </div>
    </div>
  </div><hr />
</pf-community-start-discussion>
`;

exports[`CommunityStartDiscussionComponent should show community start poll 1`] = `
<pf-community-start-discussion
  postType={[Function Number]}
  route="undefined"
  showPostJobButton={[Function Boolean]}
  store={[Function Store]}
  submittingCommunityJobSuccess$={[Function Store]}
  submittingCommunityPost$={[Function Store]}
>
  <div
    class="row mb-3"
  >
    <div
      class="col-4"
    >
      <div
        class="list-group"
      >
        <pf-community-tab />
        <pf-community-tab />
        <pf-community-tab />
      </div>
    </div>
    <div
      class="col-8 start-discussion-body pt-2 pb-2 pr-5"
    >
      <div
        class="w-100 pl-3"
      >
        
        
        
        
      </div>
    </div>
  </div><hr />
</pf-community-start-discussion>
`;
